<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".submission.fragment.detailmovie.DetailMovieFragment">

    <ImageView
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="0dp"
        android:src="@drawable/poster_aquaman"
        android:id="@+id/img_cover"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.28"
        android:contentDescription="@string/cover_detail" />
    <View
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/view_helper"
        app:layout_constraintHeight_percent="0.2"/>

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="8dp"
        android:minHeight="130dp"
        app:cardElevation="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/view_helper"
        android:layout_width="match_parent"
        android:id="@+id/card_detail"
        app:contentPadding="8dp"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:id="@+id/view_helper2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.33"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/title_movie"
                android:text="@string/app_name"
                app:layout_constraintRight_toRightOf="parent"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                app:layout_constraintLeft_toRightOf="@id/view_helper2"
                android:layout_width="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/year_movie"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="@string/year"
                app:layout_constraintLeft_toRightOf="@id/view_helper2"
                app:layout_constraintTop_toBottomOf="@id/title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RatingBar
                app:layout_constraintLeft_toRightOf="@id/view_helper2"
                app:layout_constraintTop_toBottomOf="@id/year_movie"
                android:id="@+id/rating"
                android:layout_marginTop="2dp"
                android:layout_width="wrap_content"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_height="wrap_content" />
            <androidx.cardview.widget.CardView
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/colorYellow"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_movie"
                app:contentPadding="8dp"
                app:cardCornerRadius="8dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="12sp"
                    android:id="@+id/length"
                    android:layout_width="wrap_content"
                    android:text="@string/minutes"
                    android:layout_height="wrap_content" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:cardCornerRadius="4dp"
        android:layout_marginLeft="40dp"
        app:layout_constraintWidth_percent="0.23"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_helper"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:id="@+id/photo"
            android:src="@drawable/poster_aquaman" />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        android:id="@+id/card_overview"
        app:cardCornerRadius="8dp"
        android:layout_marginLeft="24dp"
        app:contentPadding="8dp"
        app:contentPaddingBottom="16dp"
        android:layout_marginRight="24dp"
        app:layout_constraintTop_toBottomOf="@id/card_detail"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/overview"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:text="@string/category_description"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:text="@string/feature_crew"
        android:gravity="center"
        android:id="@+id/txt_crew"
        app:layout_constraintTop_toBottomOf="@id/card_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/rv_company"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/txt_crew"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:layout_marginTop="16dp"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_crew"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>